--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,50 @@ background: linear-gradient(to top,#030615,rgba(255,25));
 .sideBarContents button:hover{
   opacity: 0.5;
 }
+
+.infoNote {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  font-family:  "Roboto Mono", monospace;
+}
+
+.infoNote-content {
+  font-family:  "Roboto Mono", monospace;
+  background:transparent;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.infoNote-content h2 {
+  font-family:  "Roboto Mono", monospace;
+  margin-top: 0;
+}
+
+.infoNote-content button {
+  font-family:  "Roboto Mono", monospace;
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.infoNote-content button:hover {
+  background-color: #0056b3;
+}
+
 @media (min-width: 640px) {
 
 .sideBar{
@@ -206,7 +250,7 @@ background: linear-gradient(to top,#030615,rgba(255,25));
   flex:1;
 }
 
-@media (min-width:200px) and (max-width:550px) {
+@media (min-width:400px) and (max-width:550px) {
 
   .sideBar{
     position: relative;
@@ -265,6 +309,134 @@ footer h5{
   align-items: center;
   padding: 1%;
 }
+}
+@media (min-width:200px) and (max-width:399px) {
 
+  .sideBar{
+    position: relative;
+    inset:unset;
+    min-width: 35%;
+    box-shadow: 0 0 10px 10px #030615;
   
+  }
+  .sideBarContents{
+    margin: unset;
+  }
+  .centered-title {
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
+    text-align: start;
+    font-size: 1.1rem;
+  }
+  .centered-title img {
+    width: 180px;
+    height: 80px;
+    padding-bottom: 1rem;
+  }
+  .footerImgName {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 11rem;
+  padding-left: 1rem;
+  gap: 1rem;
+}
+.footerImgName  h2{
+  font-size: 1.5rem;
+}
+.footerButtons {
+position: fixed;
+top: 0;
+right: 0;
+}
+.footerRights{
+  padding-right: 2rem;
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+footer h5{
+  font-family:  "Roboto Mono", monospace;
+  font-size: xx-small;
+}
+.mobileResizeH5{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1%;
+}  
+}
+@media (min-width:1000px){
+  .infoNote {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    font-family:  "Roboto Mono", monospace;
+  }
+  
+  .infoNote-content {
+    font-family:  "Roboto Mono", monospace;
+    background:transparent;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    font-size: 2.5rem;
+  }
+  
+  .infoNote-content h2 {
+    font-size: 5rem;
+    font-family:  "Roboto Mono", monospace;
+    margin-top: 0;
+  }
+  
+  .infoNote-content button {
+    width: 10rem;
+    height: 5rem;
+    font-family:  "Roboto Mono", monospace;
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 1.6rem;
+  }
+  
+  .infoNote-content button:hover {
+    background-color: #0056b3;
+  }
+  .infoNote-content img{
+    width:600px ;
+    height:200px ;
+  }
+  
+.sideBar{
+  position: relative;
+  inset:unset;
+  min-width: 35%;
+  box-shadow: 0 0 10px 10px #030615;
+
+}
+.sideBarContents{
+  margin: unset;
+}
+}
+.loadingPage{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex:1;
 }
